     * Fixed bug in 'Old Friend' where Rakshas' portrait doesn't appear.
     * Balancing and text changes in 'Old Friend'
 * build system
   * Fixed autoconf/automake builds so that --disable-python-install
     will not try to create the default install directory for python
     stuff when it isn't needed. Otherwise if you aren't root, make
     errors out.
 * language and i18n:
   * updated translations: Danish, Finnish, French, German, Greek, Japanese,
     Lithuanian, Polish, Serbian, Spanish, Swedish
   * updated DejaVu font to 2.19
 * multiplayer:
   * new map: Mokena Prairie
   * revised maps: Hamlets, Meteor Lake, 4p Hamlets, Paths of Daggers,
     Loris River
   * improvements to the sound of the countdown timer
   * the countdown timer alert can now start sounding while dialogs are open
   * unit descriptions are no longer evaluated for the recruitment checksum
     and thus avoiding an OOS error when different languages are used.
     The change is incompatible with older trunk versions fixes (bug #9472).
   * Show the (possibly bogus) GPV and fog settings of games with "Use map
     settings" on in a darker font. (patch #771 by uso)
   * the random start ToD option is now properly saved and loaded
     when use map default is used (bug #9532)
   * Changed the Id of the Halberdier from "Halbardier" to "Halberdier"
   * New name for the "Soul Shooter": "Banebow"
   * multiplayer lobby: highlight the names of the players which have joined
     the selected game (bug #7471)
   * multiplayer lobby: tab completion works for all player names now,
     not only for those which are not in a game (bug #9350)
   * enable "teamchat" for observers
 * graphics
   * fixed a glitch with the undo of recruit or recall on high places.
   * Improve rendering of "black stripes": don't hide footsteps or fog,
     and apply it also on off-map tiles when active.
   * Improve rendering of grid: draw under fog, shroud and "black stripes"