@@ -12,6 +12,8 @@ Version 1.3.6+svn:
      will not try to create the default install directory for python
      stuff when it isn't needed. Otherwise if you aren't root, make
      errors out.
+   * If --enable-display-revision isn't enabled SVNREV is no longer defined
+     in the build process.
  * language and i18n:
    * updated translations: Danish, Finnish, French, German, Greek, Japanese,
      Lithuanian, Polish, Serbian, Spanish, Swedish
@@ -134,6 +136,8 @@ Version 1.3.6+svn:
      cause a problem for multiplayer, but no advancement paths currently
      have this case. You do get to keep your current traits, even if you
      wouldn't get them in the new unit type.
+   * the minimum savegame protection is ignored when either the savegame
+     or the current game has 'test' as version
 
 Version 1.3.6:
  * language and i18n:
